# public/docs/openapi.yaml
@@ -44,7 +44,7 @@ paths:
       security: []
   /api/login:
     post:
-      summary: 'Get a JWT via given credentials.'
+      summary: Login
       description: ''
       parameters:
         -
@@ -74,18 +74,18 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: djacobs@example.net
+                  example: dane72@example.org
                 password:
                   type: string
                   description: 'Must be at least 6 characters.'
-                  example: zee
+                  example: h
               required:
                 - email
                 - password
       security: []
   /api/dashboard:
     post:
-      summary: ''
+      summary: Dashboard
       description: ''
       parameters:
         -
@@ -102,10 +102,63 @@ paths:
           example: application/json
           schema:
             type: string
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {{token}}'
+          schema:
+            type: string
+      responses:
+        401:
+          description: ''
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: 'scenario = "invalid token"'
+      tags:
+        - Endpoints
+  /api/users:
+    post:
+      summary: "User API\nGet all the user by pagination"
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {{token}}'
+          schema:
+            type: string
       responses: {  }
       tags:
         - Endpoints
-      security: []
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                page:
+                  type: integer
+                  description: 'Page number for pagination.'
+                  example: 1
 tags:
   -
     name: Endpoints
